fixed text align issue for tablet

--- a/AboutPageAssets/styles/aboutPageStyle.css
+++ b/AboutPageAssets/styles/aboutPageStyle.css
@@ -289,6 +289,7 @@ header .profileHeader {
 }
 .mainContent .section2 {
 	clear: both;
+	text-align: left;
 }
 .section2 .section2Content {
 	padding: 0px;
